# backend-boilerplate-practice

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  app.py  pyproject.toml  tox.ini
docs/: README.md
docs/app/: README.md  routing.md  serialization.md
docs/exercises/: README.md
docs/general/: commands.md  server-configs.md  tools.md
practice_backend/: __init__.py  app.py  exceptions.py
practice_backend/config/: __init__.py  app.py
practice_backend/middlewares/: authentication.py
practice_backend/schemas/: __init__.py
practice_backend/utils/: exception.py  validation.py
practice_backend/views/: root.py  urls.py
production/: .nginx.conf
requirements/: dev.txt  main.txt
scripts/: dev.sh  lock_pipenv.sh  lock_requirements.sh  migration_db.sh  setup_dev_db.sh  test.sh
scripts/.circleci/: config.yml
