[tool.poetry]
name = "backend_boilerplate_pratice"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.6"
starlette = "^0.13.1"
ujson = "^1.35"
uvicorn = "^0.11.7"
uvloop = { version = "^0.14.0", markers = "implementation_name != 'pypy' and platform_system != 'Windows'"}
marshmallow = "^3.4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.0.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
